--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script src="script.js"></script>
+  
 </head>
 <body>
 
 <div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p> 
-</div>
+  <h1>Class Olympics VI</h1>
+  <h2>Sign Up App</h2>
+  <div id='events-container'>
+    
+  </div>
 
+</div>
+<script src="script.js"></script>
 </body>
 </html>
