sid number input

--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 <div class="container">
   <h1>Class Olympics VI</h1>
   <h2>Sign Up App</h2>
-  <div id='events-container'>
-    
-  </div>
-
+  <form><input type="number" min=500000 max=999999 step=1 placeholder="Student ID#" /><br><input type="submit" /></form>
+  <div id='events-container'></div>
 </div>
 <script src="script.js"></script>
 </body>
