better card clicking and disabled inputs

--- a/index.html
+++ b/index.html
@@ -24,19 +24,15 @@
     <button id="login" class="btn btn-primary">Login</button>
     <br>
     <label for="first"class="hideAtStart">First Name</label>
-    <input name="first" class="hideAtStart"/><br>
+    <input name="first" class="hideAtStart" disabled/><br>
     <label for="last"class="hideAtStart">Last Name</label>
-    <input name="last" class="hideAtStart"/><br>
+    <input name="last" class="hideAtStart" disabled/><br>
     <label for="grade"class="hideAtStart">Grade Level</label>
-    <input name="grade" class="hideAtStart"/><br>
+    <input name="grade" class="hideAtStart" disabled/><br>
     <label for="event" class="hideAtStart">Event</label>
-    <select name="event" class="hideAtStart">
-      <option>Volleyball</option>
-      <option>Black Jack</option>
-      <option>Putt Putt</option>
-    </select>
+    <input type="text" name="event" class="hideAtStart" disabled/>
     <br>
-    <button id="signup" class="hideAtStart btn btn-primary">Sign Up</button>
+    <button id="signup" class="hideAtStart btn btn-primary" disabled>Sign Up</button>
   </form>
   <div id='events-container'></div>
 </div>
