--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </header>
   <form>
     <label for="name">Student ID#</label>
-    <input name="idnum" type="number" min=500000 max=999999 step=1 placeholder="Student ID#" />
+    <input name="idnum" type="number" size="6" min=500000 max=999999 step=1 placeholder="######" />
     <button id="login" class="btn btn-primary">Login</button>
     <br>
     <label for="first"class="hideAtStart">First Name</label>
@@ -34,7 +34,12 @@
     <br>
     <button id="signup" class="hideAtStart btn btn-primary" disabled>Sign Up</button>
   </form>
-  <div id='events-container'></div>
+  <div class="alert alert-danger hideAtStart"><strong>"Sign Up" is currently disabled.</strong> Sign Up will unlock this Friday May 3rd at 6 A.M. Events are first come first serve!</div>
+  <p>Click on an event card to see more details about the event. Click on "Select" set that event as your current selection.</p>
+  <div id='events-container'>
+    <div class="alert alert-warning">Loading events...</div>
+  </div>
+    
 </div>
 <script src="script.js"></script>
 </body>
