more features and error handling

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <label for="event" class="hideAtStart">Event</label>
     <input type="text" name="event" class="hideAtStart" disabled/>
     <br>
+    <br>
+    <label for="selection">Current Selection: </label>
+    <input type="text" name="selection" disabled />
     <button id="signup" class="hideAtStart btn btn-primary" disabled>Sign Up</button>
   </form>
   <div class="alert alert-danger hideAtStart"><strong>"Sign Up" is currently disabled.</strong> Sign Up will unlock this Friday May 3rd at 6 A.M. Events are first come first serve!</div>
