added names of student collaborators

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <header>
     <h1>Class Olympics VI</h1>
     <h2>Sign Up App</h2>
+    <h5>Developed by NV Computer Programming Seniors</h5>
   </header>
   <form>
     <label for="name">Student ID#</label>
@@ -43,6 +44,22 @@
     <div class="alert alert-warning">Loading events...</div>
   </div>
     
+</div>
+<div>
+  <a name="license">CC-BY-SA 2019 Sylvania Northivew Computer Programming Senior Class:</a><ul>
+    <li>Michael Bolchalk</li>
+    <li>Zachary Burton</li>
+    <li>Jeffrey Challen</li>
+    <li>Travis Cox</li>
+    <li>Ruben Gonzalez</li>
+    <li>John Kopan</li>
+    <li>Emily McBee</li>
+    <li>Quinten McLeary</li>
+    <li>John Noviski</li>
+    <li>Joshua Peatee</li>
+    <li>Bentley Randall</li>
+    <li>Jayce Roberts</li>
+  </ul>
 </div>
 <script src="script.js"></script>
 </body>
