actually enable submit

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <br>
     <label for="selection">Current Selection: </label>
     <input type="text" name="selection" disabled />
-    <button id="signup" class="hideAtStart btn btn-primary" disabled>Sign Up</button>
+    <button id="signup" class="hideAtStart btn btn-primary">Sign Up</button>
   </form>
   <div class="alert alert-danger hideAtStart"><strong>"Sign Up" is currently disabled.</strong> Sign Up will unlock this Friday May 3rd at 6 A.M. Events are first come first serve!</div>
   <p>Click on an event card to see more details about the event. Click on "Select" set that event as your current selection.</p>
