--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <h5>Developed by NV Computer Programming Seniors</h5>
   </header>
   <form>
-    <label for="name">Student ID#</label>
+    <label for="name"><span class="badge badge-info">Step 2: Login</span>Student ID#</label>
     <input name="idnum" type="number" size="6" min=500000 max=999999 step=1 placeholder="######" />
     <button id="login" class="btn btn-primary">Login</button>
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" data-onfailure="onFailure"><span class="badge badge-info">Step 3: Verify Account</span></div>
     <br>
     <label for="first"class="hideAtStart">First Name</label>
     <input name="first" class="hideAtStart" disabled/><br>
@@ -39,29 +39,16 @@
     <br>
     <label for="selection">Current Selection: </label>
     <input type="text" name="selection" disabled />
-    <button id="signup" class="hideAtStart btn btn-primary">Sign Up</button>
+    <button id="signup" class="hideAtStart btn btn-primary" disabled><span class="badge badge-secondary">(Locked) <del>Step 4: Submit</del></span>Sign Up</button>
   </form>
-  <p>Click on an event card to see more details about the event. Click on "Select" set that event as your current selection.</p>
+  <p><span class="badge badge-info">Step 1: View Events</span>Click on an event card to see more details about the event. Click on "Select" set that event as your current selection.</p>
   <div id='events-container'>
     <div class="alert alert-warning">Loading events...</div>
   </div>
     
 </div>
 <div>
-  <a name="license">CC-BY-SA 2019 Sylvania Northivew Computer Programming Senior Class:</a><ul>
-    <li>Michael Bolchalk</li>
-    <li>Zachary Burton</li>
-    <li>Jeffrey Challen</li>
-    <li>Travis Cox</li>
-    <li>Ruben Gonzalez</li>
-    <li>John Kopan</li>
-    <li>Emily McBee</li>
-    <li>Quinten McLeary</li>
-    <li>John Noviski</li>
-    <li>Joshua Peatee</li>
-    <li>Bentley Randall</li>
-    <li>Jayce Roberts</li>
-  </ul>
+  <a name="license">CC-BY-SA 2019 Northivew Computer Programming</a>
 </div>
 <script src="script.js"></script>
 </body>
