--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
   <header>
     <h1>Class Olympics VI</h1>
     <h2>Sign Up App</h2>
-    <h5>Developed by NV Computer Programming Seniors</h5>
   </header>
   <form>
-    <label for="name"><span class="badge badge-info">Step 2: Login</span>Student ID#</label>
+    <label for="name"><span class="badge badge-info">Step 1: Login</span>Student ID#</label>
     <input name="idnum" type="number" size="6" min=500000 max=999999 step=1 placeholder="######" />
     <button id="login" class="btn btn-primary">Login</button>
-    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" data-onfailure="onFailure"><span class="badge badge-info">Step 3: Verify Account</span></div>
+    <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark" data-onfailure="onFailure"><span class="badge badge-info">Step 2: Verify Account</span></div>
     <br>
     <label for="first"class="hideAtStart">First Name</label>
     <input name="first" class="hideAtStart" disabled/><br>
@@ -39,16 +38,20 @@
     <br>
     <label for="selection">Current Selection: </label>
     <input type="text" name="selection" disabled />
-    <button id="signup" class="hideAtStart btn btn-primary" disabled><span class="badge badge-secondary">(Locked) <del>Step 4: Submit</del></span>Sign Up</button>
+    <div id='locked' class='alert alert-warning'>
+    Registration opens at 6 AM on Friday, April 30th. Spots fill up fast, so get in soon to reserve your spot!
+    </div>
+    <button id="signup" class="btn btn-primary" disabled><span class="badge badge-secondary">(Locked) <del>Step 4: Submit</del></span>Sign Up</button>
   </form>
-  <p><span class="badge badge-info">Step 1: View Events</span>Click on an event card to see more details about the event. Click on "Select" set that event as your current selection.</p>
+  <p style="margin-top: 7vh;"><span class="badge badge-info">Step 3: View Events</span>Click on an event card to see more details about the event. Click on "Select" to set that event as your current selection.</p>
   <div id='events-container'>
-    <div class="alert alert-warning">Loading events...</div>
+    <div class="alert alert-primary"> <span class="spinner-grow spinner-grow-sm text-primary"></span>Loading events...</div>
   </div>
     
 </div>
 <div>
   <a name="license">CC-BY-SA 2019 Northivew Computer Programming</a>
+  <a name="build">Build 23: 4/27/21 11PM</a>
 </div>
 <script src="script.js"></script>
 </body>
