prevent user errors

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     </div>
     <button id="signup" class="btn btn-primary" disabled><span class="badge badge-secondary">(Locked) <del>Step 4: Submit</del></span>Sign Up</button>
   </form>
-  <p style="margin-top: 7vh;"><span class="badge badge-info">Step 3: View Events</span>Click on an event card to see more details about the event. Click on "Select" to set that event as your current selection.</p>
+  <p style="margin-top: 7vh;"><span class="badge badge-info">Step 3: View Events</span>Click on an event card to see more details about the event.
+    After logging in, click on "Select" to set that event as your current selection.</p>
   <div id='events-container'>
     <div class="alert alert-primary"> <span class="spinner-grow spinner-grow-sm text-primary"></span>Loading events...</div>
   </div>
@@ -51,7 +52,8 @@
 </div>
 <div>
   <a name="license">CC-BY-SA 2019 Northivew Computer Programming</a>
-  <a name="build">Build 23: 4/27/21 11PM</a>
+  <br>
+  <a name="build">Build 25: 4/27/21 11:07PM</a>
 </div>
 <script src="script.js"></script>
 </body>
