Step 2 label shows before Google sign in

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       data-theme="dark" 
       data-onfailure="onFailure"
       data-onload="onGoogleLoad">
-      <span class="badge badge-info">Step 2: Verify Account</span></div>
+    </div>
+    <br>
+    <span class="badge badge-info">Step 2: Verify Account</span>
     <br>
     <label for="first"class="hideAtStart">First Name</label>
     <input name="first" class="hideAtStart" disabled/><br>
@@ -56,9 +58,9 @@
     
 </div>
 <div>
-  <a name="license">CC-BY-SA 2019 Northivew Computer Programming</a>
+  <a name="license">CC-BY-SA 2021 Northivew Computer Programming</a>
   <br>
-  <a name="build">Build 26: 4/27/21 11:23PM</a>
+  <a name="build">Build 27: 4/27/21 11:27PM</a>
 </div>
 <script src="script.js"></script>
 </body>
