VIII not VI, add date

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
 <div class="container">
   <header>
-    <h1>Class Olympics VI</h1>
+    <h1>Class Olympics VIII</h1>
+    <h3>Thursday, May 13th</h3>
     <h2>Sign Up App</h2>
   </header>
   <form>
