note about loading new app build

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <h1>Class Olympics VIII</h1>
     <h3>Thursday, May 13th</h3>
-    <h2>Sign Up App</h2>
+    <h2>Sign Up App (Build 27.3)</h2>
   </header>
   <form>
     <label for="name"><span class="badge badge-info">Step 1: Login</span>Student ID#</label>
@@ -47,7 +47,8 @@
     <label for="selection">Current Selection: </label>
     <input type="text" name="selection" disabled />
     <div id='locked' class='alert alert-warning'>
-    Registration opens at 6 AM on Friday, April 30th. Spots fill up fast, so get in soon to reserve your spot!
+    Registration opens at 6 AM on Friday, April 30th. Spots fill up fast, so get in soon to reserve your spot! You should see App Build 28 (after 6 AM 4/30) at the top.
+      If you don't, follow <a href="#troubleshooting">these instructions</a> to load the current version of the app.
     </div>
     <button id="signup" class="btn btn-primary" disabled><span class="badge badge-secondary">(Locked) <del>Step 4: Submit</del></span>Sign Up</button>
   </form>
@@ -61,7 +62,12 @@
 <div>
   <a name="license">CC-BY-SA 2021 Northivew Computer Programming</a>
   <br>
-  <a name="build">Build 27: 4/27/21 11:27PM</a>
+  <a name="build">Build 27.3: 4/29/21 9:43AM</a>
+  <a name="troubleshooting">How to Load New App Version:</a>
+  <ol>
+    <li>Follow <a href="https://nvcompsci.github.io/ClassOlympicsApp/script.js">this link</a> and refresh the page once.</li>
+    <li>Follow <a href="https://nvcompsci.github.io/ClassOlympicsApp/index.html">this link</a> and refresh the page once.</li>
+  </ol>
 </div>
 <script src="script.js"></script>
 </body>
