--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header>
     <h1>Class Olympics VIII</h1>
     <h3>Thursday, May 13th</h3>
-    <h2>Sign Up App (Build 27.3)</h2>
+    <h2>Sign Up App (Build 28)</h2>
   </header>
   <form>
     <label for="name"><span class="badge badge-info">Step 1: Login</span>Student ID#</label>
@@ -46,11 +46,7 @@
     <br>
     <label for="selection">Current Selection: </label>
     <input type="text" name="selection" disabled />
-    <div id='locked' class='alert alert-warning'>
-    Registration opens at 6 AM on Friday, April 30th. Spots fill up fast, so get in soon to reserve your spot! You should see App Build 28 (after 6 AM 4/30) at the top.
-      If you don't, follow <a href="#troubleshooting">these instructions</a> to load the current version of the app.
-    </div>
-    <button id="signup" class="btn btn-primary" disabled><span class="badge badge-secondary">(Locked) <del>Step 4: Submit</del></span>Sign Up</button>
+    <button id="signup" class="btn btn-primary" disabled><span class="badge badge-info">Step 4: Submit</span>Sign Up</button>
   </form>
   <p style="margin-top: 7vh;"><span class="badge badge-info">Step 3: View Events</span>Click on an event card to see more details about the event.
     After logging in, click on "Select" to set that event as your current selection.</p>
@@ -62,7 +58,7 @@
 <div>
   <a name="license">CC-BY-SA 2021 Northivew Computer Programming</a>
   <br>
-  <a name="build">Build 27.3: 4/29/21 9:43AM</a>
+  <a name="build">Build 28: 4/30/21 6:00AM</a>
   <a name="troubleshooting">How to Load New App Version:</a>
   <ol>
     <li>Follow <a href="https://nvcompsci.github.io/ClassOlympicsApp/script.js">this link</a> and refresh the page once.</li>
