Update date and lock

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 <div class="container">
   <header>
-    <h1>Class Olympics VIII</h1>
-    <h3>Thursday, May 13th</h3>
-    <h2>Sign Up App (Build 28)</h2>
+    <h1>Class Olympics IX</h1>
+    <h3>Tuesday, May 17th</h3>
+    <h2>Sign Up App (Build 35)</h2>
   </header>
   <form>
     <label for="name"><span class="badge badge-info">Step 1: Login</span>Student ID#</label>
@@ -58,7 +58,7 @@
 <div>
   <a name="license">CC-BY-SA 2021 Northivew Computer Programming</a>
   <br>
-  <a name="build">Build 28: 4/30/21 6:00AM</a>
+  <a name="build">Build 35: 4/29/22</a>
   <a name="troubleshooting">How to Load New App Version:</a>
   <ol>
     <li>Follow <a href="https://nvcompsci.github.io/ClassOlympicsApp/script.js">this link</a> and refresh the page once.</li>
