--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <header>
     <h1>Class Olympics IX</h1>
     <h3>Tuesday, May 17th</h3>
-    <h2>Sign Up App (Build 35)</h2>
+    <h2>Sign Up App (Build 36)</h2>
+    <h2 class="bg-success" style="max-width:fit-content">Unlocked - Sign up now!</h2>
   </header>
   <form>
     <label for="name"><span class="badge badge-info">Step 1: Login</span>Student ID#</label>
@@ -58,7 +59,7 @@
 <div>
   <a name="license">CC-BY-SA 2021 Northivew Computer Programming</a>
   <br>
-  <a name="build">Build 35: 4/29/22</a>
+  <a name="build">Build 36: 5/2/22 6:00am (real time, not fake time)</a>
   <a name="troubleshooting">How to Load New App Version:</a>
   <ol>
     <li>Follow <a href="https://nvcompsci.github.io/ClassOlympicsApp/script.js">this link</a> and refresh the page once.</li>
